--- a/public/assets/scss/_product.scss
+++ b/public/assets/scss/_product.scss
@@ -157,6 +157,9 @@ q
     border-color: #007bff;
 }
 
+#productColumn {
+    display: none;
+}
 .product {
     .product-grid {
         padding-top: 20px;
@@ -171,14 +174,13 @@ q
         .product-card:hover {
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
         }
-
         .product-img {
-            margin: 10px; /* 10px ở bên trái và bên phải, 20px ở trên và dưới */
+            margin: 10px;
             display: flex;
-            width: calc(100% - 20px); /* Chiều rộng với các đệm 10px bên trái và bên phải */
+            width: calc(100% - 20px);
             height: 250px;
-            justify-content: center; /* Căn giữa theo chiều ngang */
-            align-items: center; /* Căn giữa theo chiều dọc */
+            justify-content: center;
+            align-items: center;
         }
 
         .product-img img {
