[Client] Trang tin tức

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -11,3 +11,7 @@
 @import "detail";
 @import "cart";
 @import "checkout";
+@import "post";
+@import "listPost";
+@import "postDetail";
+@import "postByCategory";
