--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13502,7 +13502,7 @@ a:-webkit-any-link {
     color: black
 }
 
-q .breadcrumb {
+.breadcrumb {
     font-size: 16px;
     margin: 10px 0
 }
@@ -13627,7 +13627,7 @@ q .breadcrumb {
     margin-bottom: 0
 }
 
-.switchView i {
+.col-md-6 i {
     font-size: 1.5rem;
     margin-right: 10px;
     cursor: pointer
@@ -13658,10 +13658,6 @@ q .breadcrumb {
     border-color: #007bff
 }
 
-#productColumn {
-    display: none
-}
-
 .product .product-grid {
     padding-top: 20px
 }
@@ -13678,22 +13674,20 @@ q .breadcrumb {
 }
 
 .product .product-grid .product-img {
-    margin: 10px;
+    margin: 20px;
     display: flex;
-    width: calc(100% - 20px);
-    height: 250px;
-    justify-content: center;
-    align-items: center
+    width: calc(100% - 40px);
+    height: 250px
 }
 
 .product .product-grid .product-img img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: cover
 }
 
 .product .product-grid .product-img:hover img {
-    transform: scale(1.2)
+    transform: scale(1.1)
 }
 
 .product .product-grid .product-info {
@@ -13709,8 +13703,7 @@ q .breadcrumb {
 .product .product-grid .product-price {
     margin: 0 0 5px;
     font-size: 20px;
-    display: flex;
-    font-weight: bolder
+    display: flex
 }
 
 .product .product-grid .product-price .product-price-discounted {
@@ -13768,7 +13761,7 @@ q .breadcrumb {
     margin: 10px;
     display: flex;
     width: calc(100% - 20px);
-    height: 220px
+    height: 210px
 }
 
 .product .product-column .product-img img {
@@ -13778,11 +13771,11 @@ q .breadcrumb {
 }
 
 .product .product-column .product-img:hover img {
-    transform: scale(1.2)
+    transform: scale(1.1)
 }
 
 .product .product-column .product-info {
-    padding: 0
+    padding: 10px
 }
 
 .product .product-column .product-title {
@@ -13892,13 +13885,8 @@ q .breadcrumb {
     color: #1a1d20
 }
 
-.product .pagination-menu .dropdown .dropdown-item {
-    text-decoration: none
-}
-
 .product .pagination-menu .page-link {
-    color: #1a1d20;
-    text-decoration: none
+    color: #1a1d20
 }
 
 .main .section-sale {
