--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13674,20 +13674,22 @@ a:-webkit-any-link {
 }
 
 .product .product-grid .product-img {
-    margin: 20px;
+    margin: 10px;
     display: flex;
-    width: calc(100% - 40px);
-    height: 250px
+    width: calc(100% - 20px);
+    height: 250px;
+    justify-content: center;
+    align-items: center
 }
 
 .product .product-grid .product-img img {
-    width: 100%;
-    height: 100%;
+    max-width: 100%;
+    max-height: 100%;
     object-fit: cover
 }
 
 .product .product-grid .product-img:hover img {
-    transform: scale(1.1)
+    transform: scale(1.2)
 }
 
 .product .product-grid .product-info {
@@ -13762,7 +13764,7 @@ a:-webkit-any-link {
     margin: 10px;
     display: flex;
     width: calc(100% - 20px);
-    height: 210px
+    height: 220px
 }
 
 .product .product-column .product-img img {
@@ -13772,11 +13774,11 @@ a:-webkit-any-link {
 }
 
 .product .product-column .product-img:hover img {
-    transform: scale(1.1)
+    transform: scale(1.2)
 }
 
 .product .product-column .product-info {
-    padding: 10px
+    padding: 0
 }
 
 .product .product-column .product-title {
