--- a/public/assets/scss/_product.scss
+++ b/public/assets/scss/_product.scss
@@ -1,3 +1,4 @@
+q
 .breadcrumb {
     font-size: 16px;
     margin: 10px 0;
@@ -172,20 +173,23 @@
         }
 
         .product-img {
-            margin: 20px;
+            margin: 10px; /* 10px ở bên trái và bên phải, 20px ở trên và dưới */
             display: flex;
-            width: calc(100% - 40px);
+            width: calc(100% - 20px); /* Chiều rộng với các đệm 10px bên trái và bên phải */
             height: 250px;
-
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-            }
+            justify-content: center; /* Căn giữa theo chiều ngang */
+            align-items: center; /* Căn giữa theo chiều dọc */
         }
 
+        .product-img img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: cover;
+        }
+
+
         .product-img:hover img {
-            transform: scale(1.1);
+            transform: scale(1.2);
         }
 
         .product-info {
@@ -252,7 +256,7 @@
             margin: 10px;
             display: flex;
             width: calc(100% - 20px);
-            height: 210px;
+            height: 220px;
 
             img {
                 width: 100%;
@@ -262,11 +266,11 @@
         }
 
         .product-img:hover img {
-            transform: scale(1.1);
+            transform: scale(1.2);
         }
 
         .product-info {
-            padding: 10px;
+            padding: 0;
         }
 
         .product-title {
