--- a/public/assets/scss/_mixin.scss
+++ b/public/assets/scss/_mixin.scss
@@ -14,7 +14,7 @@
     text-overflow: ellipsis;
     height: ($fontSize * $lineHeight * $line) + px;
 }
-  
+
 @mixin coverImage(){
     width: 100%;
     height: 100%;
@@ -26,3 +26,13 @@
     height: $height + px;
     // overflow: hidden;
 }
+
+@mixin truncate-text($fontSize, $max-characters) {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: $fontSize + px;
+    // Calculate the width based on the number of characters
+    width: calc(#{$max-characters} * 1ch);
+}
+
