--- a/public/assets/scss/_home.scss
+++ b/public/assets/scss/_home.scss
@@ -1,5 +1,5 @@
 .main {
-   
+
     // ----- section sale
     .section-sale {
         background-color: #fff;
@@ -122,11 +122,11 @@
         .group {
             grid-template-columns: 20% 80%;
             // grid-template-rows: 100%;
-            max-height: 279px;
+            max-height: 200px;
             overflow: hidden;
 
             @media screen and (max-width: 768px) {
-                grid-template-columns: 25% 75%;
+                grid-template-columns: 30% 70%;
             }
 
             @media screen and (max-width: 540px) {
@@ -180,7 +180,7 @@
 
             .group-item {
                 border: 1px solid $color-border;
-                height: 100%;
+                height: 90%;
                 display: flex !important;
                 justify-content: space-between;
 
@@ -198,9 +198,8 @@
                 }
 
                 .image-item {
-                    width: 82px;
-                    height: 82px;
-                    margin-top: 40px;
+                    width: 50%;
+                    height: 100%;
 
                     @media screen and (max-width: 768px) {
                         width: 60px;
@@ -218,6 +217,11 @@
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
+                    }
+                    .text-truncate {
+                        white-space: nowrap;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
                     }
                 }
 
