[Client] Trang cửa hàng

--- a/public/assets/scss/style.scss
+++ b/public/assets/scss/style.scss
@@ -21,5 +21,7 @@ body {
 @import "listPost";
 @import "postDetail";
 @import "postByCategory";
+@import "shop";
+@import "productItem";
 @import "web_content";
 
