--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -15663,6 +15663,246 @@ body {
     }
 }
 
+.section-information {
+    padding: 1rem;
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px
+}
+
+.section-information .shop-avatar {
+    width: 80px;
+    height: 80px;
+    overflow: hidden;
+    margin-right: 1rem
+}
+
+@media screen and (max-width: 540px) {
+    .section-information .shop-avatar {
+        min-width: 50px;
+        height: 50px
+    }
+}
+
+.section-information .shop-avatar img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover
+}
+
+.section-information .shop-info .shop-name {
+    font-size: 24px
+}
+
+.shop-all {
+    margin-bottom: 20px
+}
+
+@media screen and (max-width: 760px) {
+    .shop-all #categoryShop {
+        display: none
+    }
+}
+
+.shop-all .category-all {
+    background-color: white;
+    padding: 1rem
+}
+
+@media screen and (max-width: 768px) {
+    .shop-all .category-all {
+        padding: .5rem
+    }
+}
+
+.shop-all .category-all .title-category {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 1rem
+}
+
+@media screen and (max-width: 768px) {
+    .shop-all .category-all .title-category {
+        padding-bottom: .5rem
+    }
+}
+
+@media screen and (max-width: 1024px) {
+    .shop-all .category-all .title-category {
+        font-size: 1rem
+    }
+}
+
+.shop-all .category-all .list-group-custom {
+    background: none;
+    border: none
+}
+
+.shop-all .category-all .list-group-custom:hover {
+    background-color: rgba(0, 0, 0, 0.02)
+}
+
+.shop-all .category-all .list-group-custom a {
+    color: black
+}
+
+.shop-all .category-all .active {
+    background-color: rgba(0, 0, 0, 0.02)
+}
+
+.shop-all .category-all .active a {
+    color: #0d6efd;
+    font-weight: 500
+}
+
+.shop-all .offcanvas-custom {
+    top: 0
+}
+
+.shop-all .product-container .text-muted {
+    display: none
+}
+
+.product-item {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    position: relative
+}
+
+.product-item:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    transform: scale(1.03)
+}
+
+.product-item .sale-off {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: rgba(255, 216, 64, 0.92);
+    color: red;
+    width: 50px;
+    height: 30px;
+    border-top-right-radius: .375rem;
+    display: flex;
+    justify-content: center;
+    align-items: center
+}
+
+.product-item .sale-off:after {
+    content: "";
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: 30px;
+    right: 0;
+    border-left: 25px solid rgba(255, 216, 64, 0.92);
+    border-right: 25px solid rgba(255, 216, 64, 0.92);
+    border-bottom: 10px solid transparent
+}
+
+.product-item .item-img {
+    width: 90%;
+    height: 300px;
+    margin: 5%
+}
+
+@media screen and (max-width: 1200px) {
+    .product-item .item-img {
+        height: 230px
+    }
+}
+
+.product-item .item-img img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover
+}
+
+.product-item .item-info {
+    border-top: 1px solid var(--bs-border-color);
+    padding: 1rem
+}
+
+@media screen and (max-width: 1200px) {
+    .product-item .item-info {
+        padding: .5rem
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .product-item .item-info {
+        padding: 1rem
+    }
+}
+
+.product-item .item-info .row-box {
+    display: flex;
+    justify-content: space-between
+}
+
+.product-item .item-info .row-box .item-price {
+    display: flex;
+    flex-direction: column
+}
+
+.product-item .item-info .row-box .item-price .price {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    font-size: 18px;
+    width: calc(22 * 1ch)
+}
+
+@media screen and (max-width: 1200px) {
+    .product-item .item-info .row-box .item-price .price {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 16px;
+        width: calc(20 * 1ch)
+    }
+}
+
+@media screen and (max-width: 992px) {
+    .product-item .item-info .row-box .item-price .price {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        font-size: 18px;
+        width: calc(22 * 1ch)
+    }
+}
+
+.product-item .item-info .row-box .item-price .price .price-discounted {
+    font-size: 14px
+}
+
+.product-item .item-info .row-box .item-favorite {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 30px;
+    height: 30px
+}
+
+.product-item .item-info .row-box .item-favorite i {
+    color: #0a53be
+}
+
+.product-item .item-info .item-title {
+    font-size: 16px;
+    line-height: 1.5;
+    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 48px
+}
+
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
