--- a/public/assets/scss/_home.scss
+++ b/public/assets/scss/_home.scss
@@ -180,7 +180,7 @@
 
             .group-item {
                 border: 1px solid $color-border;
-                height: 90%;
+                height: 100px;
                 display: flex !important;
                 justify-content: space-between;
 
@@ -190,7 +190,7 @@
                 }
 
                 .content-item {
-
+                    height: 50%;
 
                     small {
                         @include text(13, $color-icon);
@@ -198,7 +198,7 @@
                 }
 
                 .image-item {
-                    width: 50%;
+                    width: 100%;
                     height: 100%;
 
                     @media screen and (max-width: 768px) {
@@ -224,15 +224,7 @@
                         text-overflow: ellipsis;
                     }
                 }
-
-
-
             }
-
-
-
-
-
         }
 
 
@@ -334,87 +326,26 @@
     }
 
 
-    // ----- Section-service
-    .section-service {
-        margin-top: 10px;
-
-        .card {
-            @media screen and (max-width: 540px) {
-                margin-bottom: .5rem;
-            }
-
-            .icon {
-                background-color: #D1E7FF;
-                // padding: 24px;
-                border-radius: 50px;
-                width: 55px;
-                height: 55px;
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                position: absolute;
-                right: 20px;
-                bottom: 50px;
-            }
-        }
-
-
-    }
-
-
-    // ----- Section conutry
-    .section-country {
-        margin-top: 30px;
-
-        .country-item {
-            margin-bottom: .5rem;
-            padding-left: .5rem;
-
-            .box-img {
-                float: left;
-                margin-right: 10px;
-                width: 28px;
-                height: 20px;
-
-                img {
-                    width: 100%;
-                    object-fit: cover
-                }
-            }
-
-            .info-country {
-
-
-                .text-country {
-                    @include text(13, $color-icon);
-                }
-            }
-        }
-
-
-
-    }
-
-
-
-
     // ----- Section subscribe
     .section-subscribe {
         margin-top: 40px;
         width: 100%;
-        background-color: #EFF2F4;
         padding: 40px;
 
-        span {
-            color: #606060;
+        .btn-xem-them {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 16px;
+            color: white;
+            background-color: #606060;
+            border: 2px solid transparent;
+            text-decoration: none;
+            transition: border-color 0.3s;
+            border-radius: 5px;
         }
 
-        .subscribe-form {
-            width: 30%;
-
-            @media screen and (max-width: 540px) {
-                width: 90%;
-            }
+        .btn-xem-them:hover {
+            border-color: #007bff;
         }
 
     }
